--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.20.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-images": "^0.5.19",
     "react-redux": "^7.0.3",
     "react-router-dom": "^4.4.0-beta.8",
     "react-scripts": "3.0.1",
